outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-28_00-20-56/evaluations/problem_eval-5600562805076433853_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate distance and 2-step lookahead based on the number of remaining unvisited nodes, using a sigmoid function to smooth the transition between proximity and long-term planning, while also introducing a small random perturbation to escape local optima.}
                                                                                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate distance and 2-step lookahead based on the number of remaining unvisited nodes, using a sigmoid function to smooth the transition between proximity and long-term planning, while also introducing a small random perturbation to escape local optima.}
                                                                                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'
